# kilometers-workflow

./: .dockerignore  ARCHITECTURE_SUMMARY.md  CURSOR_MASTER_PROMPT.md  CURSOR_QUICK_START.md  CURSOR_SETUP_PROMPT.md  CURSOR_TROUBLESHOOTING.md  ImplementStrategiesAndArchitecture.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
agents/: __init__.py  base.py
agents/market-validation/: __init__.py  market_validation_agent.py
docs/: TASK_BREAKDOWN.md
docs/guides/: QUICK_SCAFFOLDING.md
examples/: run_workflow.py
infrastructure/docker/: Dockerfile.python
orchestration/workflow-engine/: __init__.py  sdlc_workflow.py
scripts/: setup.sh
services/api-gateway/: main.py
shared/models/: workflow.py
