[project]
name = "kilometers-workflow"
version = "0.1.0"
description = "AI Agent Workflow System for SDLC Automation"
requires-python = ">=3.9"

[project.dependencies]
# Core AI/ML
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
langgraph = "^0.0.20"
crewai = "^0.1.0"

# Agent Tools
aider-chat = "^0.20.0"
gitpython = "^3.1.40"
pygithub = "^2.1.1"

# Workflow & Orchestration
celery = {extras = ["redis"], version = "^5.3.4"}
redis = "^5.0.1"
pydantic = "^2.5.0"

# Notifications
python-telegram-bot = "^20.7"
discord-webhook = "^1.3.0"

# Web Framework
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
websockets = "^12.0"

# Database
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
pgvector = "^0.2.4"

# Monitoring
phoenix-arize = "^2.0.0"
agentops = "^0.1.0"

# Development
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
ruff = "^0.1.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["N999"]